# telegram_content_studio

./: .env.example  .gitignore  Caddyfile.production  Caddyfile.snippet  Dockerfile  README.md  docker-compose.yml  pyproject.toml  Описание проекта.md
scripts/: reset_admin_password.py
tests/: test_admin.py  test_auth.py  test_config.py  test_content_tools.py  test_images.py  test_instagram.py  test_platform_admin.py  test_referrals.py  test_rendering.py  test_saas.py  test_schema.py  test_storage.py  test_worker.py  test_workspace_ux.py
voicerhub_bot/: __init__.py  admin.py  auth.py  batches.py  billing.py  bot.py  config.py  content.py  content_tools.py  formatting.py  ideas.py  images.py  instagram.py  knowledge.py  main.py  models.py  permissions.py  referrals.py  rendering.py  saas.py  saas_worker.py  slugs.py  social_publishing.py  storage.py  text_utils.py  visual_templates.py  worker.py
voicerhub_bot/frontend/: action.html  action.js  app.html  app.js  auth-i18n.js  auth.js  login.html  register.html  register.js  styles.css
