[project]
name = "voicerhub-content-bot"
version = "0.1.0"
description = "Telegram editorial bot for the VoicerHub company channel."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=1.82.0",
    "pillow>=11.0.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
voicerhub-bot = "voicerhub_bot.main:main"
voicerhub-admin = "voicerhub_bot.admin:main"
content-studio-worker = "voicerhub_bot.saas_worker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["voicerhub_bot*"]

[tool.setuptools.package-data]
voicerhub_bot = ["assets/*.jpg", "assets/template_previews/*.png"]
